--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
   },
   "include": [
     "src",
     "env.d.ts"
-  ]
+  ],
+  "exclude": [
+    "node_modules",
+  ],
+  "files": ["./src/oidc/index.ts"]
 }
